repair part bug

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   </div>
   <div class="control">
     <input type="button" id="start" value="开始">
+    <input type="button" id="startChessPlan" value="开始打谱">
+    <input type="button" id="endChessPlan" value="结束打谱">
   </div>
 </body>
 </html>
