--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <input type="button" id="start" value="开始">
     <input type="button" id="startChessPlan" value="开始打谱">
     <input type="button" id="endChessPlan" value="结束打谱">
+    <label><input type="radio" name="firstSet" value='red' checked="true" disabled="disabled">红棋优先</label>
+    <label><input type="radio" name="firstSet" value='black' disabled="disabled">黑棋优先</label>
   </div>
 </body>
 </html>
